--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,6 +60,25 @@
   </div>
 </section>
 
+<!-- Cursos -->
+<section class="container mx-auto p-4">
+  <h2 class="text-2xl font-bold text-white mb-4">Cursos</h2>
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+    <div *ngFor="let course of courses" class="bg-base-200 rounded overflow-hidden shadow-lg p-4 hover:shadow-xl transition-shadow duration-300">
+      <img 
+        [src]="course.image" 
+        alt="Curso" 
+        class="w-full h-48 object-cover mb-3 rounded cursor-pointer"
+        (click)="openModal(course.image)">
+      <h3 class="text-lg font-semibold text-white mb-1">{{ course.title }}</h3>
+      <p class="text-sm text-gray-300 mb-3">{{ course.description }}</p>
+      <a [href]="course.link" target="_blank" class="btn btn-primary w-full">Ir al curso</a>
+    </div>
+  </div>
+</section>
+
+
+
 <!-- Modal -->
 <div *ngIf="isModalOpen" class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50">
   <div class="bg-white p-6 rounded-lg shadow-xl relative max-w-3xl w-full">
