--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,14 +65,19 @@
   <h2 class="text-2xl font-bold text-white mb-4">Cursos</h2>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
     <div *ngFor="let course of courses" class="bg-base-200 rounded overflow-hidden shadow-lg p-4 hover:shadow-xl transition-shadow duration-300">
-      <img 
+      
+      <a [href]="course.link" target="_blank" class="btn btn-primary w-full" style="color:white; cursor: pointer;">
+        <img 
         [src]="course.image" 
         alt="Curso" 
-        class="w-full h-48 object-cover mb-3 rounded cursor-pointer"
-        (click)="openModal(course.image)">
+        class="w-full h-48 object-cover mb-3 rounded"
+        >
+      </a>
+
+      
       <h3 class="text-lg font-semibold text-white mb-1">{{ course.title }}</h3>
       <p class="text-sm text-gray-300 mb-3">{{ course.description }}</p>
-      <a [href]="course.link" target="_blank" class="btn btn-primary w-full">Ir al curso</a>
+      <a [href]="course.link" target="_blank" class="btn btn-primary w-full" style="color:white">Ir al curso</a>
     </div>
   </div>
 </section>
