--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,7 +62,7 @@
 
 <!-- Cursos -->
 <section class="container mx-auto p-4">
-  <h2 class="text-2xl font-bold text-white mb-4">Cursos</h2>
+  <h2 class="text-2xl font-bold text-white mb-4">Cursos para Aprendices</h2>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
     <div *ngFor="let course of courses" class="bg-base-200 rounded overflow-hidden shadow-lg p-4 hover:shadow-xl transition-shadow duration-300">
       
