--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
     <!-- Menú normal (visible en pantallas medianas en adelante) -->
     <ul class="hidden md:flex space-x-4">
       <li><a href="#" class="hover:underline">Inicio</a></li>
-      <li><a href="#" class="hover:underline">Contacto</a></li>
+      <!-- <li><a href="#" class="hover:underline">Contacto</a></li> -->
     </ul>
   </div>
 
